--- a/angular-iti2/src/app/app.component.html
+++ b/angular-iti2/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>{{sayHello()}}</h1> <!--Interpolation-->
+<app-header></app-header> 
+<div class="container-fluid ps-0">
+
+<section class="row">
+    <app-sidebar class="col-2"></app-sidebar>
+    <app-home class="col-10"></app-home>
+</section>
+</div>
+<app-footer></app-footer>
