--- a/angular-iti2/src/app/Components/home/home.component.html
+++ b/angular-iti2/src/app/Components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<img src="{{storeInfo.imgURL}}" alt="" class="img-fluid m-1"> <!--interpolation--> 
+<!--<img [src]="storeInfo.imgURL" alt=""> PROPERTY BINDING-->
+<h1>{{storeInfo.name}}</h1>
+
+<h3>Our Branches:</h3>
+ <!--Structural Directives-->
+ <ul>
+    <li *ngfor="let item of storeInfo.branches">{{item}}</li>
+ </ul>
