--- a/angular-iti2/src/app/Components/home/home.component.html
+++ b/angular-iti2/src/app/Components/home/home.component.html
@@ -1,9 +1,11 @@
-<img src="{{storeInfo.imgURL}}" alt="" class="img-fluid m-1"> <!--interpolation--> 
+<img *ngIf="isImageShown"src="{{storeInfo.imgURL}}" alt="" class="img-fluid m-1"> <!--interpolation--> 
 <!--<img [src]="storeInfo.imgURL" alt=""> PROPERTY BINDING-->
 <h1>{{storeInfo.name}}</h1>
 
 <h3>Our Branches:</h3>
  <!--Structural Directives-->
  <ul>
-    <li *ngfor="let item of storeInfo.branches">{{item}}</li>
+    <li *ngFor="let item of storeInfo.branches">{{item}}</li>
+     
  </ul>
+ <button type="button" class="btn btn-default bg-primary" (click)="toggleImage()">toggle image</button>
