--- a/angular-iti2/src/app/app.component.html
+++ b/angular-iti2/src/app/app.component.html
@@ -3,7 +3,8 @@
 
 <section class="row">
     <app-sidebar class="col-2"></app-sidebar>
-    <app-home class="col-10"></app-home>
+    <!--<app-home class="col-10"></app-home>-->
+    <app-product-list class="col-10"></app-product-list>
 </section>
 </div>
 <app-footer></app-footer>
