--- a/angular-iti2/src/app/Components/order/product-list/product-list.component.html
+++ b/angular-iti2/src/app/Components/order/product-list/product-list.component.html
@@ -45,7 +45,7 @@
                 <td><input class="form-vontrol" type="number" #itemsCount></td>
                 <td>{{item?.price}}</td>
                 <td>
-                <button type="button" class="btn btn-light" (click)="reduceQuant(item,itemsCount.value,item.price)">button</button>
+                <button type="button" class="btn btn-primary" (click)="reduceQuant(item,itemsCount.value,item.price)">buy</button>
                 </td>
             </tr>
            
